--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "npx @11ty/eleventy --serve --port=8080",
     "clean": "rm -rf docs",
     "deploy": "npx @11ty/eleventy --pathprefix=/",
-    "deploy-subdomain": "npx @11ty/eleventy --pathprefix=/docs/"
+    "deploy-subdomain": "npx @11ty/eleventy --pathprefix=/WikiTerraria/"
   },
   "keywords": [],
   "author": "",
